--- a/src/styles/works.scss
+++ b/src/styles/works.scss
@@ -9,6 +9,15 @@
     justify-content: space-between;
 }
 
+// *{
+//     border: 1px solid red;
+// }
+
+html{
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
 .works-container{
     .works-header{
         @include flex-between();
